--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,8 +1,46 @@
 
-.menu_icon {
-  margin: 10px;
+.container {
+  position: relative;
+  background-color: rgb(238, 238, 238);
 }
 
-header {
-  background-color: rgba(238, 238, 238, 1);
+.button {
+  background-color: #000000;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  margin: 10px;
+  z-index: 5;  
+}
+
+.ul_container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.95);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  overflow: hidden;
+  z-index: 2;  // The menu is behind the overlay when open
+}
+
+.li_container {
+  list-style: none;
+  margin: 0;
+  padding: 20px 0;
+  font-family: sofia-pro, sans-serif;
+
+  a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 30px;
+      
+  }
 }
