--- a/src/pages/TimerDigital/timerdigital.scss
+++ b/src/pages/TimerDigital/timerdigital.scss
@@ -12,8 +12,25 @@
   gap: 1rem;
 }
 
+
+
+.gif_background {
+height: 150px;
+background-color: #757575;
+width: 100%;
+margin: 50px 0;
+padding: 0px;
+}
+
+.giphy {
+  border: none;
+  cursor: none;
+}
+
+
+
 .timerdigital_count {
-  font-size: 5rem;
+  font-size: 5.5rem;
   font-family: 'Orbitron', sans-serif;
 }
 
@@ -52,3 +69,16 @@
     }
   }
 }
+
+  .btn_stoptimer {
+    color: #ffffff;
+    padding: 10px 20px;
+    border: whitesmoke 2px solid;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: all 0.3s;
+    background-color: #000000;
+    margin-top: 20px;
+  }
