--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 
 footer {
-    background-color: #000000;
-    padding: 20px 0;
+    background-color: #333;
+    padding: 10px 0;
     text-align: center;
     color: #6c757d;
     font-size: 14px;
@@ -9,7 +9,7 @@ footer {
     bottom: 0;
     width: 100%;
     z-index: 1;
-    border-top: 1px solid #e9ecef;
+    border-top: 1px solid #000000;
     .footer_text {
         color: #ffffff;
         text-decoration: none;
