--- a/src/pages/TimerAnalog/timeranalog.scss
+++ b/src/pages/TimerAnalog/timeranalog.scss
@@ -4,7 +4,7 @@
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #333;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
