--- a/src/pages/TimerDigital/timerdigital.scss
+++ b/src/pages/TimerDigital/timerdigital.scss
@@ -12,23 +12,6 @@
   gap: 1rem;
 }
 
-
-
-.gif_background {
-height: 150px;
-background-color: #757575;
-width: 100%;
-margin: 50px 0;
-padding: 0px;
-}
-
-.giphy {
-  border: none;
-  cursor: none;
-}
-
-
-
 .timerdigital_count {
   font-size: 5.5rem;
   font-family: 'Orbitron', sans-serif;
@@ -39,18 +22,18 @@ padding: 0px;
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  gap: 20px;
+  gap: 10px;
   margin-top: 50px;
 
   .btn_ {
     color: #fff;
-    padding: 10px 20px;
+    padding: 6px 14px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
-    transition: all 0.3s;
+    border: 2px solid transparent;
 
     &._start {
       background-color: #2ecc71;
