--- a/src/pages/Settimer/Settimer.scss
+++ b/src/pages/Settimer/Settimer.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100dvh;
+  height: 95vh;
   background-color: #333;
 }
 
