--- a/src/pages/Settimer/Settimer.scss
+++ b/src/pages/Settimer/Settimer.scss
@@ -61,6 +61,28 @@ color: white;
     cursor: pointer;
     width: 40px;
   }
+
+  
 }
+
+.portfolio {
+  color: #fff;
+  font-size: 12px;
+  cursor: pointer;
+  padding-top: 50px;
+}
+
+.link_portfolio {
+  font-size: 12px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.link_portfolio:hover {
+  text-decoration: underline;
+  color: #ffbb33;
+}
+
+
 
 
