--- a/src/pages/TimerDigital/timerdigital.scss
+++ b/src/pages/TimerDigital/timerdigital.scss
@@ -65,3 +65,22 @@
     background-color: #000000;
     margin-top: 20px;
   }
+
+
+  .portfolio {
+    color: #fff;
+    font-size: 12px;
+    cursor: pointer;
+    padding-top: 50px;
+  }
+  
+  .link_portfolio {
+    font-size: 12px;
+    cursor: pointer;
+    color: #fff;
+  }
+  
+  .link_portfolio:hover {
+    text-decoration: underline;
+    color: #ffbb33;
+  }
